# WNBA-Betting

./: .env.example  .gitignore  ALL_IMPROVEMENTS_SUMMARY.md  ALWAYS_USE_NN_GUIDE.md  AUTO_ADVANCE_FEATURE.md  COMPLETE_SUCCESS.md  DAILY_UPDATE_FIX_SUMMARY.md  DAILY_UPDATE_NN_COMPLETE.md  DAILY_UPDATE_STATUS.md  DAILY_UPDATE_SUCCESS_2025-10-17.md  DATA_STATUS_REPORT.md  DATA_SUFFICIENCY_SUMMARY.md  DEPLOYMENT_COMPLETE.md  END_TO_END_VERIFICATION.md  ENHANCED_TRAINING_WORKFLOW.md  FRONTEND_DATA_FLOW_REVIEW.md  FRONTEND_EVALUATION.md  FRONTEND_INTEGRATION_COMPLETE.md  FRONTEND_VERIFICATION_COMPLETE.md  FULL_PROPS_IMPLEMENTATION_PLAN.md  GAME_MODELS_STATUS.md  GIT_PUSH_CONFIGURATION.md  GIT_PUSH_SUMMARY.md  IMPROVEMENTS_COMPLETE.md  IMPROVEMENT_ROADMAP.md  LINE_SCORE_FORMAT_COMPLETE.md  MISSION_ACCOMPLISHED.md  MODELING_ROADMAP.md  NEW_CLI_COMMAND.py  NEXT_FACTOR_ROADMAP.md  NEXT_LIVE_TESTING.md  NEXT_STEPS_COMPLETE.md  NEXT_STEPS_DEPLOYMENT.md  NN_PROPS_QUICK_WIN.md  NN_PROPS_STATUS.md  NN_SYSTEM_STATUS_COMPLETE.md  NPU_ACTIVATION_REPORT.md  NPU_ENVIRONMENT_SETUP.md  NPU_INTEGRATION_SUMMARY.md  OPENING_NIGHT_QUICK_REF.md  (+60 more)
data/: features_catalog.json
scripts/: _nightly_commit.ps1  _run_calibration.ps1  _run_live_lens_audit.ps1  _smoke_recs.py  analyze_pbp_window.py  append_calib_row.py  backfill_odds_30_days.ps1  backfill_pbp_markets.ps1  backfill_predictions_60_days.ps1  backfill_two_years.ps1  backtest_pbp_markets.py  build_eval_alert.ps1  build_eval_health.ps1  build_weekly_health_md.ps1  check_finals_sources.py  check_schedule_slice.py  check_tip_join.py  print_calib.py  (+57 more)
(+11553 files in other folders)
